Fix CQ test skip: probe append in setUp to detect mmap failure before test methods